fix: hide horizontal scroll bar in Firefox

--- a/src/components/layout/navigation/style.module.scss
+++ b/src/components/layout/navigation/style.module.scss
@@ -141,6 +141,8 @@
     @apply border-t border-zinc-200;
     @apply overflow-x-scroll;
 
+    scrollbar-width: none;
+
     &::-webkit-scrollbar {
       @apply hidden;
     }
